Add constraints to path parameters (#720)
